  brackets, e.g. mysql://[2001:db8:85a3::8a2e:370:7334]:3306/test
  Requires that linked database libs supports IPv6. MySQL 5.x, 
  Postgres 9.x and Oracle 11.x or later versions should be fine.
* New: Honor timezone information if provided with date-time column
  values. Previous version assumed date-time information to be in UTC
  (which is the usual case).

Version 3.0
-----------
* New: Methods for retrieving Date, Time, DateTime and TimeStamp column
  values from a ResultSet. PreparedStatement_setTimestamp for setting
  Unix timestamp.
* New: ResultSet_isnull, can be used to explicit test if a column
  value in a Result Set is SQL null. A Result Set already returns
  the NULL pointer for string and blob types and 0 for primitive data
  types if column value is SQL null, but to differ between SQL null and 
  the value NULL or 0, this method can be used.
* New: PreparedStatement_getParameterCount, Returns the number of 
  parameters in a prepared statement
* New: It is now a checked runtime error for the url parameter given 
  in ConnectionPool_new() to be NULL.
* New: No longer require flex installed as the generated file is
  part of the distribution.
* Fixed: Oracle: memory corruption in OracleResultSet when a Blob 
  value is retrieved as a String

Version 2.12
--------------
* New: PreparedStatement_rowsChanged added to PreparedStatement.h
* Fixed: Oracle: OCIPing is used to check oracle connection and
  ensure that the Pool returns connected connections. Thanks to
  Pavlo Lavrenenko.

Version 2.11.3
--------------
* New: License exception added to allow for linking and 
  distributing this Software together with OpenSSL.

Version 2.11.2
--------------
* New: Throw SQLException if a database access error occurs
  when ResultSet_next() is called. Previously, access errors
  could be masked as end of result set. Thanks to JiaQiang Xu.
* Fixed: Possible mem leak in Oracle's blob operation fixed 
  (Volodymyr Tarasenko)

Version 2.11.1
--------------