@@ -306,7 +306,6 @@ void ConnectionPool_stop(T P) {
                         _drainPool(P);
                         P->filled = false;
                         stopSweep = (P->doSweep && P->reaper);
-                        Connection_onstop(P);
                 }
         }
         END_LOCK;
